--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -3,19 +3,19 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/secondary_text" />
-            <corners android:radius="2dp" />
+            <corners android:radius="50dp" />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/secondary_text" />
-            <corners android:radius="2dp" />
+            <corners android:radius="50dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_text" />
-            <corners android:radius="2dp" />
+            <solid android:color="@color/colorPrimary" />
+            <corners android:radius="50dp" />
         </shape>
     </item>
 </selector>
