--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,18 +15,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.greyeg.tajr.helper.TimerTextView
-            android:textColor="@color/black_text_color"
-            android:textSize="18sp"
-            android:id="@+id/timerText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
+        <com.rafakob.drawme.DrawMeButton
+            xmlns:drawme="http://schemas.android.com/apk/res-auto"
             android:id="@+id/start_Timer"
             android:text="@string/start_work"
+            drawme:dm_textColor="@android:color/white"
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:textSize="24sp"
+            drawme:dm_rippleUseControlHighlight="true"
+            drawme:dm_backColor="@color/colorPrimary"
+            drawme:dm_shapeRadiusHalfHeight="true"/>
 
     </LinearLayout>
 
