--- a/app/src/main/res/menu/order_menu.xml
+++ b/app/src/main/res/menu/order_menu.xml
@@ -9,4 +9,9 @@
     <item
         android:id="@+id/ask_finish_work"
         android:title="@string/ask_finish_work" />
+    <item
+        app:showAsAction="always"
+        android:icon="@drawable/ic_calculator"
+        android:id="@+id/calc"
+        android:title="@string/calculator" />
 </menu>
