--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#8f3e97</color>
     <color name="colorPrimaryDark">#773292</color>
-    <color name="colorAccent">#f6eb13</color>
+    <color name="colorAccent">#1c1c1c</color>
     <color name="material_purple_700">#773292</color>
     <color name="material_light_yellow_A200">#f6eb13</color>
     <color name="material_purple_500">#8f3e97</color>
@@ -115,6 +115,11 @@
     <color name="main_color_500_50_percent">#80ef4437</color>
     -->
 
+
+    <color name="calc_grey_100">#f5f5f5</color>
+    <color name="calc_grey_200">#eeeeee</color>
+    <color name="calc_grey_300">#e0e0e0</color>
+    <color name="calc_grey_500">#9e9e9e</color>
 
     <color name="cpb_grey">#ffdedede</color>
     <color name="cpb_blue">#ff0099cc</color>
