--- a/app/src/main/res/menu/records_menu.xml
+++ b/app/src/main/res/menu/records_menu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:visible="false"
         android:id="@+id/mySwitch"
         android:title=""
         android:actionLayout="@layout/switch_layout"
