--- a/app/src/main/res/drawable/ic_background_gray.xml
+++ b/app/src/main/res/drawable/ic_background_gray.xml
@@ -2,6 +2,8 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
+            <size
+                android:height="50dp"/>
             <corners android:radius="16dp" />
             <gradient
                 android:angle="45"
