--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,157 +10,156 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+    <ScrollView
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:orientation="vertical">
-
-            <com.greyeg.tajr.view.MaterialRippleLayout
-                style="@style/RippleStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:rippleColor="@color/main_color_grey_400">
-
-            </com.greyeg.tajr.view.MaterialRippleLayout>
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="64dp"
-            android:src="@drawable/ic_logo" />
-
-        <LinearLayout
-android:paddingEnd="24dp"
-            android:paddingStart="24dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#40000000"
             android:gravity="center"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:gravity="right"
+                android:orientation="vertical">
 
-                <com.greyeg.tajr.helper.font.MaterialDesignIconsTextView
+                <com.greyeg.tajr.view.MaterialRippleLayout
+                    style="@style/RippleStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="@string/fontello_user"
-                    android:textColor="@color/white"
-                    android:textSize="16dp"
-                    tools:ignore="SpUsage" />
+                    app:rippleColor="@color/main_color_grey_400">
 
-                <com.greyeg.tajr.view.FloatLabeledEditText
-                    android:id="@+id/email"
-                    android:layout_width="0dp"
+                </com.greyeg.tajr.view.MaterialRippleLayout>
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="64dp"
+                android:src="@drawable/ic_logo" />
+
+            <LinearLayout
+                android:paddingEnd="24dp"
+                android:paddingStart="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#50000000"
+                android:gravity="center"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_weight="1"
-                    app:fletFloatingHint="@string/email"
-                    app:fletHintTextColor="@color/white"
-                    app:fletSingleLine="true"
-                    app:fletTextBackground="@drawable/edit_text_background_accent"
-                    app:fletTextColor="@color/white"
-                    app:fletTextGravity="center" />
+                    android:gravity="center_vertical">
+
+
+
+                    <com.greyeg.tajr.view.FloatLabeledEditText
+                        android:id="@+id/email"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_weight="1"
+                        app:fletFloatingHint="@string/email"
+                        app:fletHintTextColor="@color/white"
+                        app:fletSingleLine="true"
+                        app:fletTextBackground="@drawable/edit_text_background_accent"
+                        app:fletTextColor="@color/white"
+                        app:fletTextGravity="center" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:gravity="center_vertical">
+
+
+                    <com.greyeg.tajr.view.FloatLabeledEditText
+                        android:id="@+id/password"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_weight="1"
+                        app:fletFloatingHint="@string/prompt_password"
+                        app:fletHintTextColor="@color/white"
+                        app:fletPassword="true"
+                        app:fletSingleLine="true"
+                        app:fletTextBackground="@drawable/edit_text_background_accent"
+                        app:fletTextColor="@color/white"
+                        app:fletTextGravity="center" />
+                </LinearLayout>
+
+                <CheckBox
+                    android:id="@+id/remember_pass"
+                    style="@style/CheckBoxStyle.Dark"
+                    android:layout_width="match_parent"
+                    android:padding="16dp"
+                    android:text="@string/remember_password" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:gravity="center_vertical">
+                android:layout_marginTop="54dp"
+                android:orientation="vertical">
 
-                <com.greyeg.tajr.helper.font.MaterialDesignIconsTextView
+                <com.greyeg.tajr.view.MaterialRippleLayout
+                    style="@style/RippleStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="@string/fontello_password"
-                    android:textColor="@color/main_color_grey_600"
-                    android:textSize="16dp"
-                    tools:ignore="SpUsage" />
+                    android:layout_marginRight="3dp"
+                    app:rippleColor="@color/white">
 
-                <com.greyeg.tajr.view.FloatLabeledEditText
-                    android:id="@+id/password"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_weight="1"
-                    app:fletFloatingHint="@string/prompt_password"
-                    app:fletHintTextColor="@color/white"
-                    app:fletPassword="true"
-                    app:fletSingleLine="true"
-                    app:fletTextBackground="@drawable/edit_text_background_accent"
-                    app:fletTextColor="@color/white"
-                    app:fletTextGravity="center" />
+                    <com.greyeg.tajr.helper.font.RobotoTextView
+                        android:id="@+id/loginbtn"
+                        style="@style/ButtonStyle.RaisedEmpty"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="0dp"
+                        android:background="@color/main_color_500"
+                        android:minWidth="112dp"
+                        android:text="@string/login"
+                        android:textColor="#fff" />
+                </com.greyeg.tajr.view.MaterialRippleLayout>
+
+                <com.greyeg.tajr.view.ProgressWheel
+                    android:id="@+id/progress_log_in"
+                    style="@style/ProgressBarStyle.Reverse"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginRight="18dp"
+                    android:visibility="gone" />
             </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="54dp"
-            android:orientation="vertical">
-
-            <com.greyeg.tajr.view.MaterialRippleLayout
-                style="@style/RippleStyle"
+            <LinearLayout
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="3dp"
-                app:rippleColor="@color/white">
+                android:orientation="vertical">
 
-                <com.greyeg.tajr.helper.font.RobotoTextView
-                    android:id="@+id/loginbtn"
-                    style="@style/ButtonStyle.RaisedEmpty"
+                <TextView
+                    android:onClick="adminLogIn"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/admin_login"
+                    android:padding="8dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="0dp"
-                    android:background="@color/main_color_500"
-                    android:minWidth="112dp"
-                    android:text="@string/login"
-                    android:textColor="#fff" />
-            </com.greyeg.tajr.view.MaterialRippleLayout>
+                    android:layout_height="wrap_content" />
 
-            <com.greyeg.tajr.view.ProgressWheel
-                android:id="@+id/progress_log_in"
-                style="@style/ProgressBarStyle.Reverse"
-                android:layout_gravity="center"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="18dp"
-                android:visibility="gone" />
-        </LinearLayout>
-        <LinearLayout
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            </LinearLayout>
 
-            <TextView
-                android:onClick="adminLogIn"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="@string/admin_login"
-                android:padding="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
-
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
