--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,11 +6,24 @@
     tools:context=".activities.TestActivity">
 
     <ProgressBar
+        android:id="@+id/ProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="55dp"
+        android:indeterminate="false"
+        android:maxHeight="10dip"
+        android:max="120"
+        android:minHeight="10dip"
+        android:progress="50"
+        android:progressDrawable="@drawable/ic_greenprogress" />
+
+    <ProgressBar
+        android:visibility="gone"
         android:padding="120dp"
         android:id="@+id/progress_bar5"
         android:background="#40000000"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:visibility="gone"
         android:layout_width="match_parent"
