--- a/app/src/main/res/layout/layout_add_rpoduct_dialog.xml
+++ b/app/src/main/res/layout/layout_add_rpoduct_dialog.xml
@@ -42,6 +42,7 @@
         </Spinner>
 
         <EditText
+            android:inputType="number"
             android:id="@+id/product_no"
             android:layout_marginBottom="@dimen/_16ssp"
             android:layout_width="match_parent"
